lib/__fixtures__/syntax-error/ts-syntax-error.ts
type T;

console.log(x as T)
